--- a/search-intech.html
+++ b/search-intech.html
@@ -392,7 +392,7 @@
                 <div class="search-box">
                     <input type="text" 
                            id="searchInput" 
-                           placeholder="กรอกเลขแปลงที่ต้องการค้นหา เช่น 1000114511"
+                           placeholder="กรอกเลขแปลงที่ต้องการค้นหา เช่น 10001145I1"
                            autocomplete="off"
                            autofocus
                            aria-label="ช่องค้นหาเลขแปลง">
