--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ระบบค้นหาเลขแปลง IN-TECH - โครงการผ่ากอ</title>
+    <title>โครงการผ่ากอ</title>
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -275,8 +275,8 @@
             <div class="logo-container">
                 <i class="fas fa-tractor logo-icon"></i>
                 <div>
-                    <h1 class="project-title">ระบบค้นหาเลขแปลง IN-TECH</h1>
-                    <p class="project-subtitle">โครงการผ่ากอ | ฐานข้อมูลแปลงเกษตรและโครงข่ายไฟฟ้า</p>
+                    <h1 class="project-title">โครงการผ่ากอ</h1>
+                    <p class="project-subtitle">โครงการผ่ากอ | ฐานข้อมูลแปลงเกษตร</p>
                     <div class="mt-2">
                         <span class="badge bg-light text-primary me-2">ออนไลน์</span>
                         <span class="method-badge" id="currentMethod">Published CSV</span>
@@ -299,7 +299,7 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-6 mb-3">
-                                    <label class="form-label fw-bold">ค้นหาเลขแปลง IN-TECH</label>
+                                    <label class="form-label fw-bold">ค้นหาเลขแปลงIntech</label>
                                     <div class="input-group">
                                         <span class="input-group-text"><i class="fas fa-hashtag"></i></span>
                                         <input type="text" class="form-control" id="searchIntechInput" 
@@ -309,7 +309,7 @@
                                         </button>
                                     </div>
                                     <div class="form-text">
-                                        <i class="fas fa-info-circle me-1"></i> ค้นหาในคอลัมน์: เลขแปลงและยกั, เลขโครงข่าย, ชื่อราคาไฟ
+                                        <i class="fas fa-info-circle me-1"></i> ค้นหาในคอลัมน์: เลขแปลง
                                     </div>
                                 </div>
                                 
@@ -419,7 +419,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <h6><i class="fas fa-cogs me-1"></i> ระบบค้นหาเลขแปลง IN-TECH</h6>
-                    <p>โครงการผ่ากอ | พัฒนาเพื่ออำนวยความสะดวกในการค้นหาข้อมูลแปลงเกษตรและโครงข่ายไฟฟ้า</p>
+                    <p>โครงการผ่ากอ | พัฒนาเพื่ออำนวยความสะดวกในการค้นหาข้อมูลแปลงเกษต</p>
                     <div class="mt-2">
                         <i class="fas fa-database me-1"></i> Google Sheet ID: 15eCkphn1ZCWJu1fg3ppe3Os-bKxAb4alvC33mAEgGrw
                     </div>
@@ -434,7 +434,7 @@
             <hr>
             <div class="text-center">
                 <p class="mb-0">
-                    © 2023 ระบบค้นหาเลขแปลง IN-TECH - โครงการผ่ากอ
+                    © 2026 โครงการผ่ากอ
                 </p>
             </div>
         </footer>
